add content to homepage

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,15 +10,138 @@
     {
       "path": "assets/src/js/jquery.backstretch.min.js",
       "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":true,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "assets/src/img/red-hair-bg.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":10859483,\"newSize\":10859483}}"
+    },
+    {
+      "path": "assets/src/img/prom.jpeg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":1212185,\"newSize\":1226160}}"
+    },
+    {
+      "path": "assets/src/img/salon-decor.jpeg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":4138378,\"newSize\":4195966}}"
+    },
+    {
+      "path": "assets/src/img/salon-services-bg.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":2698916,\"newSize\":2695770}}"
+    },
+    {
+      "path": "assets/src/img/spa-services-bg.jpeg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":1462389,\"newSize\":1496290}}"
+    },
+    {
+      "path": "assets/src/img/threading-girl.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":1901054,\"newSize\":1897908}}"
+    },
+    {
+      "path": "assets/src/img/wedding-hair.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":2850416,\"newSize\":2847270}}"
+    },
+    {
+      "path": "assets/src/img/heart-hands.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":8034664,\"newSize\":8031518}}"
+    },
+    {
+      "path": "assets/src/img/fun-pink-hair.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":2113886,\"newSize\":2110740}}"
+    },
+    {
+      "path": "assets/src/img/flower-overlay.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":658604,\"newSize\":632279}}"
+    },
+    {
+      "path": "assets/src/img/averie-woodard-319832.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":5609884,\"newSize\":5606738}}"
+    },
+    {
+      "path": "assets/src/img/allure-main-logo.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":17079,\"newSize\":8671}}"
+    },
+    {
+      "path": "assets/src/img/allure-alt-logo-red.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":4416,\"newSize\":2229}}"
+    },
+    {
+      "path": "assets/src/img/allure-alt-logo-pink.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":4323,\"newSize\":2223}}"
+    },
+    {
+      "path": "assets/src/img/allure-alt-logo-maroon.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":4508,\"newSize\":2261}}"
+    },
+    {
+      "path": "assets/dist/img/allure-alt-logo-maroon.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":2261,\"newSize\":2261}}"
+    },
+    {
+      "path": "assets/dist/img/allure-alt-logo-pink.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":2223,\"newSize\":2223}}"
+    },
+    {
+      "path": "assets/dist/img/allure-alt-logo-red.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":2229,\"newSize\":2229}}"
+    },
+    {
+      "path": "assets/dist/img/allure-main-logo.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":8671,\"newSize\":8671}}"
+    },
+    {
+      "path": "assets/dist/img/averie-woodard-319832.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":5606738,\"newSize\":5606738}}"
+    },
+    {
+      "path": "assets/dist/img/fun-pink-hair.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":2110740,\"newSize\":2110740}}"
+    },
+    {
+      "path": "assets/dist/img/flower-overlay.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":632279,\"newSize\":632279}}"
+    },
+    {
+      "path": "assets/dist/img/heart-hands.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":8031518,\"newSize\":8031518}}"
+    },
+    {
+      "path": "assets/dist/img/prom.jpeg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":1226160,\"newSize\":1226160}}"
+    },
+    {
+      "path": "assets/dist/img/salon-decor.jpeg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":4195966,\"newSize\":4195966}}"
+    },
+    {
+      "path": "assets/dist/img/salon-services-bg.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":2695770,\"newSize\":2695770}}"
+    },
+    {
+      "path": "assets/dist/img/spa-services-bg.jpeg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":1496290,\"newSize\":1496290}}"
+    },
+    {
+      "path": "assets/dist/img/threading-girl.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":1897908,\"newSize\":1897908}}"
+    },
+    {
+      "path": "assets/dist/img/wedding-hair.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":2847270,\"newSize\":2847270}}"
+    },
+    {
+      "path": "assets/dist/img/red-hair-bg.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":10859483,\"newSize\":10859483}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "assets",
-      "assets/src",
       "assets/src/js",
       "assets/dist/js",
-      "assets/dist/css"
+      "assets/dist/css",
+      "assets/src",
+      "assets/src/img",
+      "assets/dist",
+      "assets/dist/img"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
