add footer with icomoon icons

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -130,6 +130,10 @@
     {
       "path": "assets/dist/img/red-hair-bg.png",
       "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":10859483,\"newSize\":10859483}}"
+    },
+    {
+      "path": "assets/dist/css/main.css",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":true,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
     }
   ],
   "fileTree": {
@@ -137,11 +141,12 @@
       "assets",
       "assets/src/js",
       "assets/dist/js",
-      "assets/dist/css",
       "assets/src",
-      "assets/src/img",
-      "assets/dist",
-      "assets/dist/img"
+      "assets/dist/img",
+      "assets/src/scss",
+      "assets/src/scss/_2_helpers",
+      "assets/dist/css",
+      "assets/src/fonts"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
