add spa services page with content

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -134,6 +134,10 @@
     {
       "path": "assets/dist/css/main.css",
       "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":true,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "assets/src/img/mega-bridal.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":131596,\"newSize\":132299}}"
     }
   ],
   "fileTree": {
@@ -141,12 +145,13 @@
       "assets",
       "assets/src/js",
       "assets/dist/js",
-      "assets/src",
       "assets/dist/img",
       "assets/src/scss",
       "assets/src/scss/_2_helpers",
       "assets/dist/css",
-      "assets/src/fonts"
+      "assets/src/fonts",
+      "assets/src",
+      "assets/src/img"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
