--- a/prepros-6.config
+++ b/prepros-6.config
@@ -138,6 +138,22 @@
     {
       "path": "assets/src/img/mega-bridal.jpg",
       "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":131596,\"newSize\":132299}}"
+    },
+    {
+      "path": "assets/src/img/blog-bg.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":1678559,\"newSize\":1635953}}"
+    },
+    {
+      "path": "assets/dist/img/blog-bg.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":1635953,\"newSize\":1635953}}"
+    },
+    {
+      "path": "assets/dist/img/mega-bridal.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":132299,\"newSize\":132299}}"
+    },
+    {
+      "path": "assets/src/scss/main.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
@@ -145,13 +161,10 @@
       "assets",
       "assets/src/js",
       "assets/dist/js",
-      "assets/dist/img",
-      "assets/src/scss",
-      "assets/src/scss/_2_helpers",
       "assets/dist/css",
-      "assets/src/fonts",
       "assets/src",
-      "assets/src/img"
+      "assets/src/scss",
+      "assets/dist"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
