add backstretch.js to blog page

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,7 @@
   "fileConfigs": [
     {
       "path": "assets/src/js/app.js",
-      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":true,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"assets/dist/js/production.js\",\"sourceMap\":true,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
     },
     {
       "path": "assets/src/js/jquery.backstretch.min.js",
@@ -25,7 +25,7 @@
     },
     {
       "path": "assets/src/img/salon-services-bg.jpg",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":2698916,\"newSize\":2695770}}"
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":152720,\"newSize\":161851}}"
     },
     {
       "path": "assets/src/img/spa-services-bg.jpeg",
@@ -154,17 +154,18 @@
     {
       "path": "assets/src/scss/main.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"assets/dist/css/main.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "assets/src/js/app-dist.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"assets/dist/js/production.js\",\"sourceMap\":true,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "assets",
-      "assets/src/js",
-      "assets/dist/js",
-      "assets/dist/css",
       "assets/src",
-      "assets/src/scss",
-      "assets/dist"
+      "assets/dist",
+      "assets/src/js"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -267,7 +268,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
