styled cards on homepage

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -33,7 +33,7 @@
     },
     {
       "path": "assets/src/img/threading-girl.jpg",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":1901054,\"newSize\":1897908}}"
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":35402,\"newSize\":35635}}"
     },
     {
       "path": "assets/src/img/wedding-hair.jpg",
@@ -45,7 +45,7 @@
     },
     {
       "path": "assets/src/img/fun-pink-hair.jpg",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":2113886,\"newSize\":2110740}}"
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":54321,\"newSize\":54318}}"
     },
     {
       "path": "assets/src/img/flower-overlay.png",
@@ -165,7 +165,8 @@
       "assets",
       "assets/src",
       "assets/dist",
-      "assets/src/js"
+      "assets/src/js",
+      "assets/src/img"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
