styled salon services page for mobile

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -25,11 +25,11 @@
     },
     {
       "path": "assets/src/img/salon-services-bg.jpg",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":152720,\"newSize\":161851}}"
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":176667,\"newSize\":190725}}"
     },
     {
       "path": "assets/src/img/spa-services-bg.jpeg",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":1462389,\"newSize\":1496290}}"
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":1406463,\"newSize\":1461273}}"
     },
     {
       "path": "assets/src/img/threading-girl.jpg",
@@ -158,6 +158,10 @@
     {
       "path": "assets/src/js/app-dist.js",
       "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"assets/dist/js/production.js\",\"sourceMap\":true,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "assets/src/scss/_7_pages/_pages.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
@@ -166,6 +170,8 @@
       "assets/src",
       "assets/dist",
       "assets/src/js",
+      "assets/src/scss",
+      "assets/src/scss/_7_pages",
       "assets/src/img"
     ],
     "hideSystemFiles": true,
