styled spa services for mobile

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -29,7 +29,7 @@
     },
     {
       "path": "assets/src/img/spa-services-bg.jpeg",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":1406463,\"newSize\":1461273}}"
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":614309,\"newSize\":719275}}"
     },
     {
       "path": "assets/src/img/threading-girl.jpg",
@@ -117,7 +117,7 @@
     },
     {
       "path": "assets/dist/img/spa-services-bg.jpeg",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":1496290,\"newSize\":1496290}}"
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":1141973,\"newSize\":1141973}}"
     },
     {
       "path": "assets/dist/img/threading-girl.jpg",
@@ -172,7 +172,8 @@
       "assets/src/js",
       "assets/src/scss",
       "assets/src/scss/_7_pages",
-      "assets/src/img"
+      "assets/src/img",
+      "assets/dist/img"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -275,7 +276,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
