correct and downsize main image on homepage

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -162,6 +162,18 @@
     {
       "path": "assets/src/scss/_7_pages/_pages.scss",
       "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "assets/src/scss/_2_helpers/_breakpoints.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "assets/src/img/red-hair-bg.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":298762,\"newSize\":302341}}"
+    },
+    {
+      "path": "assets/dist/img/red-hair-bg.jpg",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":302341,\"newSize\":302341}}"
     }
   ],
   "fileTree": {
@@ -170,10 +182,10 @@
       "assets/src",
       "assets/dist",
       "assets/src/js",
-      "assets/src/scss",
       "assets/src/scss/_7_pages",
       "assets/src/img",
-      "assets/dist/img"
+      "assets/dist/img",
+      "assets/src/scss/_2_helpers"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -276,7 +288,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
