made homepage responsive

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -185,7 +185,8 @@
       "assets/src/scss/_7_pages",
       "assets/src/img",
       "assets/dist/img",
-      "assets/src/scss/_2_helpers"
+      "assets/src/scss/_2_helpers",
+      "assets/dist/js"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -288,7 +289,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
