style spa packages page

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -21,7 +21,7 @@
     },
     {
       "path": "assets/src/img/salon-decor.jpeg",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":4138378,\"newSize\":4195966}}"
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":210198,\"newSize\":214038}}"
     },
     {
       "path": "assets/src/img/salon-services-bg.jpg",
@@ -109,7 +109,7 @@
     },
     {
       "path": "assets/dist/img/salon-decor.jpeg",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":4195966,\"newSize\":4195966}}"
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":214038,\"newSize\":214038}}"
     },
     {
       "path": "assets/dist/img/salon-services-bg.jpg",
@@ -179,7 +179,6 @@
   "fileTree": {
     "expandedDirs": [
       "assets",
-      "assets/src",
       "assets/dist",
       "assets/src/js",
       "assets/src/scss/_7_pages",
@@ -289,7 +288,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
