add keyframe to heading on spa packages

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -101,7 +101,7 @@
     },
     {
       "path": "assets/dist/img/heart-hands.jpg",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":8031518,\"newSize\":8031518}}"
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":212000,\"newSize\":221711}}"
     },
     {
       "path": "assets/dist/img/prom.jpeg",
@@ -288,7 +288,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
