--- a/prepros-6.config
+++ b/prepros-6.config
@@ -174,6 +174,14 @@
     {
       "path": "assets/dist/img/red-hair-bg.jpg",
       "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-jpg\":{\"enabled\":true,\"originalSize\":302341,\"newSize\":302341}}"
+    },
+    {
+      "path": "assets/dist/js/production.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "assets/src/js/jquery.backstretch.min-dist.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
     }
   ],
   "fileTree": {
@@ -182,10 +190,10 @@
       "assets/dist",
       "assets/src/js",
       "assets/src/scss/_7_pages",
-      "assets/src/img",
       "assets/dist/img",
       "assets/src/scss/_2_helpers",
-      "assets/dist/js"
+      "assets/dist/js",
+      "assets/src"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
